content/vault/v1.11.x/content/api-docs/system/seal-status.mdx
---
layout: api
page_title: /sys/seal-status - HTTP API
description: The `/sys/seal-status` endpoint is used to check the seal status of a Vault.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-07-02T11:43:42-05:00
last_modified: 2025-07-02T11:43:42-05:00
# END AUTO GENERATED METADATA
---

# `/sys/seal-status`

The `/sys/seal-status` endpoint is used to check the seal status of a Vault.

## Seal status

This endpoint returns the seal status of the Vault. This is an unauthenticated
endpoint.

| Method | Path               |
| :----- | :----------------- |
| `GET`  | `/sys/seal-status` |

### Sample request

```shell-session
$ curl \
    http://127.0.0.1:8200/v1/sys/seal-status
```

### Sample response

The "t" parameter is the threshold, and "n" is the number of shares.

```json
{
  "type": "shamir",
  "initialized": true,
  "sealed": true,
  "t": 3,
  "n": 5,
  "progress": 2,
  "nonce": "",
  "version": "1.11.0",
  "build_date": "2022-05-03T08:34:11Z",
  "migration": false,
  "recovery_seal": false,
  "storage_type": "file"
}
```

Sample response when Vault is unsealed.

```json
{
  "type": "shamir",
  "initialized": true,
  "sealed": false,
  "t": 3,
  "n": 5,
  "progress": 0,
  "nonce": "",
  "version": "1.11.0",
  "build_date": "2022-05-03T08:34:11Z",
  "migration": false,
  "cluster_name": "vault-cluster-336172e1",
  "cluster_id": "f94053ad-d80e-4270-2006-2efd67d0910a",
  "recovery_seal": false,
  "storage_type": "file"
}
```
